# kscreen-system-settings

./: CMakeLists.txt  Messages.sh  core.py  kscreensystem.desktop  kscreensystem.ui  validation.ui
debian/: changelog  control  copyright  install  postinst  prerm
python/: MonitorSettings  MonitorSettings.json  MonitorSettings.py  fixerresolution  kscreensystemsettings_fixerresolution  kscreensystemsettings_updateresolution  monitorsettings.py  updateresolution.py
src/: GeneralPage.cpp  GeneralPage.h  ValidationForm.cpp  ValidationForm.h
translations/: Messages.sh  ca@valencia.po  es-va.po  es.po  kscreen-system-settings.pot
xsession/: 90fixresolution
